@@ -1,4 +1,4 @@
-class Numeric #:nodoc: 
+class Numeric #:nodoc:
   def degrees
     self * 180 / Math::PI
   end
