@@ -1,5 +1,8 @@
 v2.6.3 Avoid Vec2D hypot NaNN with guards, correct 
-* --inner template, some more refactoring
+* --inner template, some more refactoring, full_screen is now only
+* available via a runtime arg (there is only one way to do it..)
+* now adding Range.clip (like numpy.clip) which is used to implement
+* processing constrain. Sometimes it will be better to use clip duirectly.
 
 v2.6.2 Update to use jruby-complete-1.7.15
 * X and Y screen offset for sketch, can be set in ~/.rp5rc
